assets/scss/_bootscore-custom.scss
/*!
 * Custom styles
 */

// Add your own code here!
// Because this file is compiled after Bootstrap, you're also able to use Bootstrap mixins for better code.

/* albert-sans-regular - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: 'Albert Sans';
  font-style: normal;
  font-weight: 400;
  src: url('../fonts/albert-sans-v1-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}
/* albert-sans-italic - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: 'Albert Sans';
  font-style: italic;
  font-weight: 400;
  src: url('../fonts/albert-sans-v1-latin-italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}
/* albert-sans-700 - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: 'Albert Sans';
  font-style: normal;
  font-weight: 700;
  src: url('../fonts/albert-sans-v1-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}
/* albert-sans-700italic - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: 'Albert Sans';
  font-style: italic;
  font-weight: 700;
  src: url('../fonts/albert-sans-v1-latin-700italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}

$bottom-nav-height: 77px;

#page {
  padding-bottom: $bottom-nav-height;
}

.front-page-header {
  height: calc(100dvh - 76px - #{$bottom-nav-height});
  min-height: 600px;
}

.front-page-header > #front-data-container {
  background-image: linear-gradient(to bottom, #2580C3FF, #2580C300);
}

#nav-main .navbar-brand > img {
  height: 50px;
}

#front-data {
  gap: 2rem;
}

.home .logos {
  gap: $spacer * 1.25;
}

.home .logos #logo-100 {
  height: 90px;
}

.home .logos img:not(#logo-100) {
  height: 60px
}

#logo-5to-cent {
  max-width: 320px;
  filter: drop-shadow(1px 2px 5px $dark);
}

#fecha {
  font-size: $h3-font-size;
  text-shadow: 1px 1px 6px black;
  line-height: 1.25;
}

@include media-breakpoint-up(md) {
  #fecha {
    font-size: $h2-font-size;
  }
}

@include media-breakpoint-up(lg) {
  #fecha {
    font-size: $h1-font-size;
  }
}

#welcome {
  background-image: linear-gradient(to bottom, #D4E6F3 30%, #67A7D6 100%);
}

#main-footer .navbar .navbar-nav {
  flex-direction: row;
  justify-content: center;
  gap: 2rem;
  max-width: 500px;
}

#main-footer .navbar .navbar-nav .nav-link .link-detail {
  font-size: 0.8rem;
}

body:not(.home) #content {
  background-image: linear-gradient(to bottom, #2681C4, #519AD0);
  padding-bottom: $spacer * 3;
}

@include media-breakpoint-down(xl) {
  div:not(.home) .entry-header > .row > .col {
    padding-right: 0;
  }

  div:not(.home) .entry-header > .row > .col > div > .row > .col {
    padding-right: 0;
  }
}

.disertante ul {
  list-style-type: none;
  margin-bottom: 0;
  padding-left: 0;
}

#search-disertantes #query-disertante::placeholder {
  color: $light;
  opacity: 0.75;
}

.sponsors-container {
  display: flex;
  gap: $spacer $spacer * 1.5 ;
  flex-wrap: wrap;
  place-content: center;
}

.sponsors-container .sponsor a {
  display: block;
}

.sponsors-container .sponsor img {
  aspect-ratio: 16/10;
  width: clamp(120px, 140px, 160px);
  object-fit: contain;
}

.detalle-disertantes {
  width: 100%;
  float: none;
  margin: $spacer * 1.5 0;
}

@include media-breakpoint-up(md) {
  .detalle-disertantes {
    width: 250px;
    float: right;
    margin: 0 0 $spacer $spacer;
  }
}

@include media-breakpoint-up(lg) {
  .detalle-disertantes {
    width: 300px;
  }
}

#quinto-cent iframe {
  width: 100%;
}

#quinto-cent a,
#info-epo a {
  color: $light;
}

#about-cordoba h2 {
  padding-bottom: $spacer;
  margin-bottom: $spacer;
  border-bottom: $border-width $border-style $dark-border-subtle;
}

#about-cordoba figure {
  margin-bottom: $spacer * 1.5;
}

@include media-breakpoint-up(md) {
  #about-cordoba figure {
    width: 200px;
    height: auto;
  }

  #about-cordoba figure:nth-of-type(odd) {
    float: right;
    margin-left: $spacer;
  }

  #about-cordoba figure:nth-of-type(even) {
    float: left;
    margin-right: $spacer;
  }
}

@include media-breakpoint-up(lg) {
  #about-cordoba figure {
    width: 300px;
  }
}

#hotel-sug {
  display: grid;
  grid-template-columns: 1fr;
  gap: $spacer * 1.5;
}

#hotel-sug .card > .card-body {
  display: flex;
  flex-direction: column;
}

#hotel-sug .card > .card-body > .btn {
  margin-top: auto;
}

@include media-breakpoint-up(md) {
  #hotel-sug {
    grid-template-columns: repeat(2, 1fr);
  }
}

@include media-breakpoint-up(lg) {
  #hotel-sug {
    grid-template-columns: repeat(3, 1fr);
  }
}

@include media-breakpoint-up(xxl) {
  #hotel-sug {
    grid-template-columns: repeat(4, 1fr);
  }
}

#credits {
  font-size: $font-size-base * 0.9;
}

#credits img {
  height: 48px;
  width: auto;
}

